--- a/llvm-prebuilt.opam
+++ b/llvm-prebuilt.opam
@@ -7,6 +7,8 @@ homepage: "https://github.com/prosyslab/llvm-builds"
 
 depends: [
   "ocaml" {= "5.2.0"}
+  "ctypes" {>= "0.23.0" }
+  "ocamlfind" 
 ]
 
 conflicts: [
