--- a/llvm-prosys.opam
+++ b/llvm-prosys.opam
@@ -1,5 +1,5 @@
 opam-version: "2.0"
-name: "llvm-prebuilt"
+name: "llvm-prosys"
 synopsis: "Prebuilt LLVM with OCaml bindings"
 maintainer: "Bongjun Jang"
 authors: "Programming System Lab"
